--- a/Chapter1(workflow).ipynb
+++ b/Chapter1(workflow).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMnpJxm9lTk7pZ0hOdgXsAc",
+      "authorship_tag": "ABX9TyP9oxIb8O3QGijSMUy/ZkGD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -100,7 +100,7 @@
         },
         "outputId": "d6b3e554-efe8-4521-d86a-888529a59dae"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -125,7 +125,7 @@
       "metadata": {
         "id": "zsQKV3eCSCvj"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -141,7 +141,7 @@
         "id": "ucKqmm5uTX2L",
         "outputId": "2d9a529e-bff2-4d7b-fcac-98d03bc3da6c"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -192,7 +192,65 @@
       "metadata": {
         "id": "Ae49DagRZVPO"
       },
-      "execution_count": 21,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#building a training loop in Pytorch\n"
+      ],
+      "metadata": {
+        "id": "frpByIngejIN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "OeUXCml8wFTX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list(model_0.parameters())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 141
+        },
+        "id": "cwBu6MvUxwUr",
+        "outputId": "b11b09a0-0c86-46c3-e749-0756bf0c7205"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'model_0' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-f5bd15f8cbbd>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel_0\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'model_0' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "epochs=1\n",
+        "0. loop"
+      ],
+      "metadata": {
+        "id": "MhNOOu_xx5lr"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
