--- a/NeuralNewtworks.ipynb
+++ b/NeuralNewtworks.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOwP5bjyY1in42VRgM3MJ8o",
+      "authorship_tag": "ABX9TyMQK8uWXiW2DFg/EF6zAXWi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,12 +45,12 @@
         "from sklearn.datasets import make_circles\n",
         "\n",
         "n_samples=1000\n",
-        "X,Y=make_circles(n_samples,noise=0.03, random_state=42)\n"
+        "X,y=make_circles(n_samples,noise=0.03, random_state=42)\n"
       ],
       "metadata": {
         "id": "0VanfSZowT92"
       },
-      "execution_count": 2,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -63,9 +63,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XrvQgmf-5gCh",
-        "outputId": "bc089d4a-379a-4f7a-aa0a-052deb859426"
+        "outputId": "b34bdda9-a0b6-4cc2-f730-8ba15827cbb5"
       },
-      "execution_count": 3,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -75,7 +75,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 13
         }
       ]
     },
@@ -83,7 +83,7 @@
       "cell_type": "code",
       "source": [
         "print(f\"the first 5 samples of X \\n{X[:5]}\")\n",
-        "print(f\"the first 5 samples of Y \\n{Y[:5]}\")"
+        "print(f\"the first 5 samples of Y \\n{y[:5]}\")"
       ],
       "metadata": {
         "colab": {
@@ -116,7 +116,7 @@
         "import pandas as pd\n",
         "circles=pd.DataFrame({\"X1\":X[:,0],\n",
         "                      \"X2\":X[:,1],\n",
-        "                      \"label\":Y})\n",
+        "                      \"label\":y})\n",
         "circles.head(10)"
       ],
       "metadata": {
@@ -462,7 +462,7 @@
         "import matplotlib .pyplot as plt\n",
         "plt.scatter(x=X[:,0],\n",
         "            y=X[:,1],\n",
-        "            c=Y,\n",
+        "            c=y,\n",
         "            cmap=plt.cm.RdYlBu)\n"
       ],
       "metadata": {
@@ -509,21 +509,23 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 211
         },
         "id": "CLfAqUKeGMQv",
-        "outputId": "826af6eb-b775-400b-ed25-6e8ce079ed36"
+        "outputId": "2f392e0e-b180-44f6-927f-beb9fa19cb37"
       },
-      "execution_count": 16,
+      "execution_count": 9,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Value of X_sample: [0.75424625 0.23148074]\n",
-            "Value of y_sample: 1\n",
-            "Shapes for one sample of X: (2,)\n",
-            "Shapes for one sample of y: ()\n"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'X' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-9-2095b86e741f>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mX_sample\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0my_sample\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mY\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Value of X_sample: {X_sample}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Value of y_sample: {y_sample}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Shapes for one sample of X: {X_sample.shape}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'X' is not defined"
           ]
         }
       ]
@@ -608,35 +610,6 @@
             "Requirement already satisfied: sympy==1.13.1 in /usr/local/lib/python3.11/dist-packages (from torch) (1.13.1)\n",
             "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /usr/local/lib/python3.11/dist-packages (from sympy==1.13.1->torch) (1.3.0)\n",
             "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.11/dist-packages (from jinja2->torch) (3.0.2)\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import torch"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 263
-        },
-        "outputId": "52114f39-e68c-4bf9-815b-8b1588ef66ec",
-        "id": "7nSq9qaRKEUy"
-      },
-      "execution_count": 30,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "module functions cannot set METH_CLASS or METH_STATIC",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-30-45acf5f5f725>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/torch/__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    403\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mUSE_GLOBAL_DEPS\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    404\u001b[0m         \u001b[0m_load_global_deps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 405\u001b[0;31m     \u001b[0;32mfrom\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_C\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m  \u001b[0;31m# noqa: F403\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    406\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    407\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: module functions cannot set METH_CLASS or METH_STATIC"
           ]
         }
       ]
@@ -885,6 +858,78 @@
           "execution_count": 7
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(X), X.dtype"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lYDURIl0Vv73",
+        "outputId": "f62107ed-5914-41dc-9359-493dd849dfb7"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(numpy.ndarray, dtype('float64'))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X=torch.from_numpy(X).type(torch.float)\n",
+        "y=torch.from_numpy(y).type(torch.float)\n",
+        "X[:5], y[:5]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0RACq0NjWChY",
+        "outputId": "1458226f-2155-4f66-badb-11cc5089132b"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([[ 0.7542,  0.2315],\n",
+              "         [-0.7562,  0.1533],\n",
+              "         [-0.8154,  0.1733],\n",
+              "         [-0.3937,  0.6929],\n",
+              "         [ 0.4422, -0.8967]]),\n",
+              " tensor([1., 1., 1., 1., 0.]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "X_train,X_test,y_train,y_test=train_test_split(X,y,test_size=0.2,random_state=42)\n",
+        ""
+      ],
+      "metadata": {
+        "id": "LUC9pCjIWvfe"
+      },
+      "execution_count": 16,
+      "outputs": []
     }
   ]
 }
