--- a/CloudVision-Pt/pytorch-computer-vision.ipynb
+++ b/CloudVision-Pt/pytorch-computer-vision.ipynb
@@ -3,15 +3,163 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4fe1666",
+   "id": "b8950ae5",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b4fe1666",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torch import nn\n",
+    "import torchvision\n",
+    "from torchvision import datasets\n",
+    "from torchvision import transforms\n",
+    "from torchvision.transforms import ToTensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "125c59da",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e4d8a54c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.7.1+cpu\n",
+      "0.22.1+cpu\n"
+     ]
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "print(torch.__version__)\n",
+    "print(torchvision.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "4cbda1e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 26.4M/26.4M [02:25<00:00, 182kB/s] \n",
+      "100%|██████████| 29.5k/29.5k [00:00<00:00, 203kB/s]\n",
+      "100%|██████████| 4.42M/4.42M [00:31<00:00, 142kB/s] \n",
+      "100%|██████████| 5.15k/5.15k [00:00<00:00, 12.2MB/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Getting a datasets\n",
+    "train_data=datasets.FashionMNIST(\n",
+    "    root=\"data\",\n",
+    "    train=True,\n",
+    "\n",
+    "    download=True,\n",
+    "    transform=torchvision.transforms.ToTensor(),\n",
+    "    target_transform=None\n",
+    ")\n",
+    "test_data=datasets.FashionMNIST(\n",
+    "    root=\"data\",\n",
+    "    train=False,\n",
+    "    download=True,\n",
+    "    transform=torchvision.transforms.ToTensor(),\n",
+    "    target_transform=None\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "cc99f4b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(60000, 10000)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(train_data), len(test_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "d545a68d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(['T-shirt/top',\n",
+       "  'Trouser',\n",
+       "  'Pullover',\n",
+       "  'Dress',\n",
+       "  'Coat',\n",
+       "  'Sandal',\n",
+       "  'Shirt',\n",
+       "  'Sneaker',\n",
+       "  'Bag',\n",
+       "  'Ankle boot'],\n",
+       " torch.Size([60000]),\n",
+       " torch.Size([10000, 28, 28]),\n",
+       " torch.Size([10000]))"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data.classes, train_data.targets.shape, test_data.data.shape, test_data.targets.shape"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
