Update execution counts in PyTorch notebook and clean output cells

--- a/CloudVision-Pt/pytorch-computer-vision.ipynb
+++ b/CloudVision-Pt/pytorch-computer-vision.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "b4fe1666",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "e4d8a54c",
    "metadata": {},
    "outputs": [
@@ -54,21 +54,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "4cbda1e1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 26.4M/26.4M [02:25<00:00, 182kB/s] \n",
-      "100%|██████████| 29.5k/29.5k [00:00<00:00, 203kB/s]\n",
-      "100%|██████████| 4.42M/4.42M [00:31<00:00, 142kB/s] \n",
-      "100%|██████████| 5.15k/5.15k [00:00<00:00, 12.2MB/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Getting a datasets\n",
     "train_data=datasets.FashionMNIST(\n",
@@ -90,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "cc99f4b8",
    "metadata": {},
    "outputs": [
@@ -100,7 +89,7 @@
        "(60000, 10000)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "d545a68d",
    "metadata": {},
    "outputs": [
@@ -133,7 +122,7 @@
        " torch.Size([10000]))"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "1c4e5335",
    "metadata": {},
    "outputs": [
@@ -161,7 +150,7 @@
        "(np.float64(-0.5), np.float64(27.5), np.float64(27.5), np.float64(-0.5))"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -188,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "6d378fdf",
    "metadata": {},
    "outputs": [
@@ -219,8 +208,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "658839a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of batches in train dataloader: 1875\n",
+      "Number of test dataloader 313\n"
+     ]
+    }
+   ],
+   "source": [
+    "from torch.utils.data import DataLoader\n",
+    "BATCH_SIZE=32\n",
+    "train_dataloader=DataLoader(train_data,\n",
+    "                             batch_size=BATCH_SIZE,\n",
+    "                             shuffle=True)\n",
+    "test_dataloader=DataLoader(dataset=test_data,\n",
+    "                           batch_size=BATCH_SIZE,\n",
+    "                           shuffle=False)\n",
+    "print(f\"Number of batches in train dataloader: {len(train_dataloader)}\")\n",
+    "print(f\"Number of test dataloader {len(test_dataloader)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59c93531",
+   "metadata": {},
+   "source": [
+    "Starting with a baseline model "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6a65825",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b5d71c5",
    "metadata": {},
    "outputs": [],
    "source": []
