--- a/CloudVision-Pt/pytorch-computer-vision.ipynb
+++ b/CloudVision-Pt/pytorch-computer-vision.ipynb
@@ -247,9 +247,149 @@
    "execution_count": null,
    "id": "c6a65825",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input shape: torch.Size([1, 28, 28])\n",
+      "Output shape: torch.Size([1, 784])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.4510, 0.4431, 0.3804, 0.2863, 0.2471, 0.4627, 0.3490, 0.2549, 0.3490,\n",
+       "         0.5020, 0.2235, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.5647, 0.4941, 0.4314, 0.2863, 0.2863, 0.4824, 0.3882, 0.3490,\n",
+       "         0.4000, 0.5020, 0.3686, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.5765, 0.2980, 0.2863, 0.3294, 0.3059, 0.4627, 0.2745,\n",
+       "         0.3294, 0.2471, 0.4314, 0.4118, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.5451, 0.3176, 0.3176, 0.3373, 0.3294, 0.3294,\n",
+       "         0.2667, 0.3490, 0.2745, 0.3804, 0.4824, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.5529, 0.3373, 0.3059, 0.2980, 0.3686,\n",
+       "         0.3176, 0.2863, 0.3059, 0.3294, 0.3804, 0.4627, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.6157, 0.3686, 0.2863, 0.3373,\n",
+       "         0.4000, 0.3686, 0.4118, 0.3490, 0.2667, 0.4627, 0.4431, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.6078, 0.4000, 0.3373,\n",
+       "         0.4510, 0.4824, 0.4196, 0.5137, 0.4824, 0.3294, 0.4941, 0.3882, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.5451, 0.4824,\n",
+       "         0.2863, 0.3490, 0.4314, 0.4314, 0.4314, 0.4196, 0.3373, 0.5529, 0.4118,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.4941,\n",
+       "         0.5765, 0.3490, 0.4706, 0.6275, 0.6353, 0.3882, 0.4196, 0.2745, 0.6902,\n",
+       "         0.2980, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.3882, 0.6471, 0.3608, 0.4000, 0.5843, 0.6667, 0.4431, 0.4314, 0.3176,\n",
+       "         0.7216, 0.1333, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.2235, 0.7216, 0.3059, 0.4706, 0.5647, 0.4196, 0.5451, 0.4196,\n",
+       "         0.3686, 0.7412, 0.0510, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.1529, 0.8039, 0.3176, 0.4627, 0.5529, 0.3686, 0.5961,\n",
+       "         0.4196, 0.4314, 0.7608, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.8118, 0.4118, 0.4706, 0.5020, 0.3882,\n",
+       "         0.6784, 0.3882, 0.5137, 0.7490, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.7216, 0.5020, 0.5333, 0.4824,\n",
+       "         0.3373, 0.8039, 0.3490, 0.5765, 0.6157, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.7294, 0.5451, 0.5961,\n",
+       "         0.4510, 0.1843, 0.8549, 0.4510, 0.6588, 0.4314, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.6471, 0.5765,\n",
+       "         0.6353, 0.4431, 0.0902, 0.8941, 0.5020, 0.6902, 0.2667, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.5961,\n",
+       "         0.5961, 0.6471, 0.4196, 0.0392, 1.0000, 0.5333, 0.7294, 0.0510, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.5137, 0.6980, 0.6471, 0.4510, 0.0000, 0.9882, 0.5647, 0.7412, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.4941, 0.7412, 0.7098, 0.4941, 0.0588, 0.8745, 0.5451, 0.7294,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.4824, 0.7294, 0.6902, 0.4824, 0.1922, 0.8627, 0.5333,\n",
+       "         0.7412, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.3490, 0.7922, 0.6784, 0.5255, 0.3176, 0.7922,\n",
+       "         0.6078, 0.7098, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.2549, 0.7490, 0.6588, 0.5843, 0.4196,\n",
+       "         0.7098, 0.6784, 0.6588, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.1647, 0.8118, 0.5843, 0.6275,\n",
+       "         0.3490, 0.6275, 0.6980, 0.6588, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0588, 0.7922, 0.6353,\n",
+       "         0.5137, 0.3686, 0.6157, 0.8118, 0.4941, 0.0000, 0.0078, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0275, 0.7922,\n",
+       "         0.6471, 0.5137, 0.4431, 0.6588, 0.8431, 0.2745, 0.0000, 0.0196, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.7098, 0.7216, 0.4431, 0.4314, 0.7412, 0.8235, 0.1020, 0.0000, 0.0078,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.6588, 0.7490, 0.4706, 0.5137, 0.7725, 0.7725, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000, 0.0000, 0.5255, 0.8431, 0.3608, 0.1098, 0.8431, 0.6471, 0.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "         0.0000]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get one batch from the train dataloader\n",
+    "train_features_batch, train_labels_batch = next(iter(train_dataloader))\n",
+    "\n",
+    "flatten_model = nn.Flatten()\n",
+    "x = train_features_batch[0]\n",
+    "output=flatten_model(x)\n",
+    "print(f\"Input shape: {x.shape}\")\n",
+    "print(f\"Output shape: {output.shape}\")\n",
+    "output\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "6ca44a83",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "  "
+    "from torch import nn \n",
+    "class FashionMNISTMODELV0(nn.Module):\n",
+    "    def __init__(self, \n",
+    "                  input_shape:int,\n",
+    "                  hidden_units:int,\n",
+    "                  output_shape:int):\n",
+    "         super().__init__()\n",
+    "         self.layer_stack=nn.Sequential(\n",
+    "             nn.Flatten(),\n",
+    "             nn.Linear(in_features=input_shape, out_features=hidden_units),\n",
+    "            nn.Linear(in_features=hidden_units, output_features=output_shape),\n",
+    "             \n",
+    "         )\n",
+    "    def forward(self,x):\n",
+    "        return self.layer_stack(x)\n",
+    "       \n",
+    "        return x"
    ]
   },
   {
@@ -258,7 +398,10 @@
    "id": "9b5d71c5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "torch.manual_seed(42)\n",
+    "model"
+   ]
   }
  ],
  "metadata": {
