Fix execution counts and correct output_features parameter in FashionMNIST model definition

--- a/CloudVision-Pt/pytorch-computer-vision.ipynb
+++ b/CloudVision-Pt/pytorch-computer-vision.ipynb
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "6ca44a83",
    "metadata": {},
    "outputs": [],
@@ -382,7 +382,7 @@
     "         super().__init__()\n",
     "         self.layer_stack=nn.Sequential(\n",
     "             nn.Flatten(),\n",
-    "             nn.Linear(in_features=input_shape, out_features=hidden_units),\n",
+    "             nn.Linear(in_features=input_shape, output_features=hidden_units),\n",
     "            nn.Linear(in_features=hidden_units, output_features=output_shape),\n",
     "             \n",
     "         )\n",
@@ -394,13 +394,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "9b5d71c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FashionMNISTMODELV0(\n",
+      "  (layer_stack): Sequential(\n",
+      "    (0): Flatten(start_dim=1, end_dim=-1)\n",
+      "    (1): Linear(in_features=784, out_features=10, bias=True)\n",
+      "    (2): Linear(in_features=10, out_features=10, bias=True)\n",
+      "  )\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.manual_seed(42)\n",
+    "model_0=FashionMNISTMODELV0(\n",
+    "    input_shape=784,\n",
+    "    hidden_units=10,\n",
+    "    output_shape=len(class_names)\n",
+    "    \n",
+    ").to(\"cpu\")\n",
+    "print(model_0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "cb6ea7bc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.manual_seed(42)\n",
-    "model"
+    "from torch import nn \n",
+    "\n",
+    "class FashionMNISTMODELV0(nn.Module):\n",
+    "    def __init__(self, \n",
+    "                  input_shape:int,\n",
+    "                  hidden_units:int,\n",
+    "                  output_shape:int):\n",
+    "         super().__init__()\n",
+    "         self.layer_stack=nn.Sequential(\n",
+    "             nn.Flatten(),\n",
+    "             nn.Linear(in_features=input_shape, out_features=hidden_units),\n",
+    "             nn.Linear(in_features=hidden_units, out_features=output_shape),\n",
+    "         )\n",
+    "    def forward(self,x):\n",
+    "        return self.layer_stack(x)"
    ]
   }
  ],
