Add accuracy function and setup for loss function and optimizer in FashionMNIST model

--- a/CloudVision-Pt/pytorch-computer-vision.ipynb
+++ b/CloudVision-Pt/pytorch-computer-vision.ipynb
@@ -451,8 +451,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "a0f222be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from helper_functions import accuracy_fn\n",
+    "#setup loss function and optimizer\n",
+    "loss_fn=nn.CrossEntropyLoss()\n",
+    "optimizer=torch.optim.SGD(params=model_0.parameters(),\n",
+    "                           lr=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a46d4d12",
    "metadata": {},
    "outputs": [],
    "source": []
