Fix execution counts and add timing function for training experiments in FashionMNIST model

--- a/CloudVision-Pt/pytorch-computer-vision.ipynb
+++ b/CloudVision-Pt/pytorch-computer-vision.ipynb
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "a0f222be",
    "metadata": {},
    "outputs": [],
@@ -460,13 +460,77 @@
     "#setup loss function and optimizer\n",
     "loss_fn=nn.CrossEntropyLoss()\n",
     "optimizer=torch.optim.SGD(params=model_0.parameters(),\n",
-    "                           lr=0.1)"
+    "                           lr=0.1)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "a46d4d12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#creating a function to time our experimensts \n",
+    "from timeit import default_timer as timer\n",
+    "def print_train_time(start:float, end:float,\n",
+    "                     device:torch.device=\"cpu\"):\n",
+    "    \"\"\"Prints the time taken to run a piece of code.\"\"\"\n",
+    "    total_time=end-start\n",
+    "    print(f\"Total time taken: {total_time:.3f} seconds on {device} device\")\n",
+    "    return total_time\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "41c71a53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tqdm.auto import tqdm \n",
+    "torch.manual_seed(42)\n",
+    "train_time_start_on_cpu=timer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "5a4d2a3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total time taken: 0.000 seconds on cpu device\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5.980000059935264e-05"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "start_time=timer()\n",
+    "end_time=timer()\n",
+    "print_train_time(start_time, end_time, device=\"cpu\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a46d4d12",
+   "id": "b413671c",
    "metadata": {},
    "outputs": [],
    "source": []
