Refactor code cells: remove redundant cell and adjust execution count for training time setup

--- a/CloudVision-Pt/pytorch-computer-vision.ipynb
+++ b/CloudVision-Pt/pytorch-computer-vision.ipynb
@@ -487,18 +487,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "41c71a53",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tqdm.auto import tqdm \n",
-    "torch.manual_seed(42)\n",
-    "train_time_start_on_cpu=timer()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 18,
    "id": "5a4d2a3a",
    "metadata": {},
@@ -533,7 +521,11 @@
    "id": "b413671c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from tqdm.auto import tqdm \n",
+    "torch.manual_seed(42)\n",
+    "train_time_start_on_cpu=timer()\n"
+   ]
   }
  ],
  "metadata": {
