Fix execution counts and enhance training loop with detailed logging for FashionMNIST model

--- a/CloudVision-Pt/pytorch-computer-vision.ipynb
+++ b/CloudVision-Pt/pytorch-computer-vision.ipynb
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "a0f222be",
    "metadata": {},
    "outputs": [],
@@ -517,14 +517,472 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "b413671c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/3 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 0\n",
+      "-------\n",
+      "Looked at 0/60000 samples\n",
+      "Looked at 12800/60000 samples\n",
+      "Looked at 12800/60000 samples\n",
+      "Looked at 25600/60000 samples\n",
+      "Looked at 25600/60000 samples\n",
+      "Looked at 38400/60000 samples\n",
+      "Looked at 38400/60000 samples\n",
+      "Looked at 51200/60000 samples\n",
+      "Looked at 51200/60000 samples\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 33%|███▎      | 1/3 [00:08<00:16,  8.49s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train loss: 0.5904 | Test loss: 0.5095 | Test acc: 82.0387\n",
+      "Epoch: 1\n",
+      "-------\n",
+      "Looked at 0/60000 samples\n",
+      "Looked at 12800/60000 samples\n",
+      "Looked at 12800/60000 samples\n",
+      "Looked at 25600/60000 samples\n",
+      "Looked at 25600/60000 samples\n",
+      "Looked at 38400/60000 samples\n",
+      "Looked at 38400/60000 samples\n",
+      "Looked at 51200/60000 samples\n",
+      "Looked at 51200/60000 samples\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 67%|██████▋   | 2/3 [00:16<00:08,  8.05s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train loss: 0.4763 | Test loss: 0.4799 | Test acc: 83.1969\n",
+      "Epoch: 2\n",
+      "-------\n",
+      "Looked at 0/60000 samples\n",
+      "Looked at 12800/60000 samples\n",
+      "Looked at 12800/60000 samples\n",
+      "Looked at 25600/60000 samples\n",
+      "Looked at 25600/60000 samples\n",
+      "Looked at 38400/60000 samples\n",
+      "Looked at 38400/60000 samples\n",
+      "Looked at 51200/60000 samples\n",
+      "Looked at 51200/60000 samples\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3/3 [00:24<00:00,  8.10s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train loss: 0.4550 | Test loss: 0.4766 | Test acc: 83.4265\n",
+      "Total time taken: 24.378 seconds on cpu device\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from tqdm.auto import tqdm \n",
     "torch.manual_seed(42)\n",
-    "train_time_start_on_cpu=timer()\n"
+    "train_time_start_on_cpu = timer()\n",
+    "\n",
+    "# Set the number of epochs\n",
+    "epochs = 3\n",
+    "\n",
+    "# Training loop\n",
+    "for epoch in tqdm(range(epochs)):\n",
+    "    print(f\"Epoch: {epoch}\\n-------\")\n",
+    "    \n",
+    "    # Training\n",
+    "    train_loss = 0\n",
+    "    for batch, (X, y) in enumerate(train_dataloader):\n",
+    "        model_0.train()\n",
+    "        \n",
+    "        # Forward pass\n",
+    "        y_pred = model_0(X)\n",
+    "        \n",
+    "        # Calculate loss\n",
+    "        loss = loss_fn(y_pred, y)\n",
+    "        train_loss += loss\n",
+    "        \n",
+    "        # Optimizer zero grad\n",
+    "        optimizer.zero_grad()\n",
+    "        \n",
+    "        # Loss backward\n",
+    "        loss.backward()\n",
+    "        \n",
+    "        # Optimizer step\n",
+    "        optimizer.step()\n",
+    "        \n",
+    "        # Print progress\n",
+    "        if batch % 400 == 0:\n",
+    "            print(f\"Looked at {batch * len(X)}/{len(train_dataloader.dataset)} samples\")\n",
+    "    \n",
+    "    # Divide total train loss by length of train dataloader\n",
+    "    train_loss /= len(train_dataloader)\n",
+    "    \n",
+    "    # Testing\n",
+    "    test_loss, test_acc = 0, 0\n",
+    "    model_0.eval()\n",
+    "    with torch.inference_mode():\n",
+    "        for X, y in test_dataloader:\n",
+    "            # Forward pass\n",
+    "            test_pred = model_0(X)\n",
+    "            \n",
+    "            # Calculate loss\n",
+    "            test_loss += loss_fn(test_pred, y)\n",
+    "            \n",
+    "            # Calculate accuracy\n",
+    "            test_acc += accuracy_fn(y_true=y, y_pred=test_pred.argmax(dim=1))\n",
+    "        \n",
+    "        # Calculate test loss average per batch\n",
+    "        test_loss /= len(test_dataloader)\n",
+    "        \n",
+    "        # Calculate test acc average per batch\n",
+    "        test_acc /= len(test_dataloader)\n",
+    "    \n",
+    "    print(f\"Train loss: {train_loss:.4f} | Test loss: {test_loss:.4f} | Test acc: {test_acc:.4f}\")\n",
+    "\n",
+    "# Calculate training time\n",
+    "train_time_end_on_cpu = timer()\n",
+    "total_train_time_model_0 = print_train_time(start=train_time_start_on_cpu,\n",
+    "                                           end=train_time_end_on_cpu,\n",
+    "                                           device=\"cpu\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "a681c586",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'model_name': 'FashionMNISTMODELV0', 'model_loss': 0.47663894295692444, 'model_acc': 83.42651757188499}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Function to evaluate model\n",
+    "def eval_model(model, data_loader, loss_fn, accuracy_fn):\n",
+    "    \"\"\"Evaluate a model on a given dataset.\"\"\"\n",
+    "    loss, acc = 0, 0\n",
+    "    model.eval()\n",
+    "    with torch.inference_mode():\n",
+    "        for X, y in data_loader:\n",
+    "            # Make predictions\n",
+    "            y_pred = model(X)\n",
+    "            \n",
+    "            # Accumulate loss and accuracy\n",
+    "            loss += loss_fn(y_pred, y)\n",
+    "            acc += accuracy_fn(y_true=y, y_pred=y_pred.argmax(dim=1))\n",
+    "        \n",
+    "        # Scale loss and acc\n",
+    "        loss /= len(data_loader)\n",
+    "        acc /= len(data_loader)\n",
+    "    \n",
+    "    return {\"model_name\": model.__class__.__name__,\n",
+    "            \"model_loss\": loss.item(),\n",
+    "            \"model_acc\": acc}\n",
+    "\n",
+    "# Evaluate model\n",
+    "model_0_results = eval_model(model_0, test_dataloader, loss_fn, accuracy_fn)\n",
+    "print(model_0_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73444fd1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to make predictions and visualize results\n",
+    "def make_predictions(model, data, class_names):\n",
+    "    \"\"\"Make predictions on a batch of data and visualize results.\"\"\"\n",
+    "    pred_probs = []\n",
+    "    model.eval()\n",
+    "    with torch.inference_mode():\n",
+    "        for sample in data:\n",
+    "            sample = torch.unsqueeze(sample, dim=0)\n",
+    "            pred_logit = model(sample)\n",
+    "            pred_prob = torch.softmax(pred_logit.squeeze(), dim=0)\n",
+    "            pred_probs.append(pred_prob.cpu())\n",
+    "    \n",
+    "    pred_probs_tensor = torch.stack(pred_probs)\n",
+    "    return pred_probs_tensor\n",
+    "\n",
+    "# Get a batch of test samples\n",
+    "test_samples = []\n",
+    "test_labels = []\n",
+    "for sample, label in random.sample(list(test_data), k=9):\n",
+    "    test_samples.append(sample)\n",
+    "    test_labels.append(label)\n",
+    "\n",
+    "# Make predictions\n",
+    "pred_probs = make_predictions(model_0, test_samples, class_names)\n",
+    "pred_classes = pred_probs.argmax(dim=1)\n",
+    "\n",
+    "# Plot predictions\n",
+    "plt.figure(figsize=(12, 8))\n",
+    "nrows = 3\n",
+    "ncols = 3\n",
+    "for i, sample in enumerate(test_samples):\n",
+    "    plt.subplot(nrows, ncols, i+1)\n",
+    "    plt.imshow(sample.squeeze(), cmap=\"gray\")\n",
+    "    \n",
+    "    # Create title\n",
+    "    pred_label = class_names[pred_classes[i]]\n",
+    "    truth_label = class_names[test_labels[i]]\n",
+    "    title_text = f\"Pred: {pred_label} | Truth: {truth_label}\"\n",
+    "    \n",
+    "    # Change color based on prediction accuracy\n",
+    "    if pred_label == truth_label:\n",
+    "        plt.title(title_text, fontsize=10, c=\"green\")\n",
+    "    else:\n",
+    "        plt.title(title_text, fontsize=10, c=\"red\")\n",
+    "    \n",
+    "    plt.axis(False)\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "24f2e584",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'model_0' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 52\u001b[39m\n\u001b[32m     49\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m cm\n\u001b[32m     51\u001b[39m \u001b[38;5;66;03m# Generate confusion matrix\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m52\u001b[39m cm = make_confusion_matrix(\u001b[43mmodel_0\u001b[49m, test_dataloader, class_names)\n",
+      "\u001b[31mNameError\u001b[39m: name 'model_0' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "import numpy as np\n",
+    "\n",
+    "# Create confusion matrix\n",
+    "def make_confusion_matrix(model, data_loader, class_names):\n",
+    "    \"\"\"Create a confusion matrix for model predictions.\"\"\"\n",
+    "    y_preds = []\n",
+    "    y_true = []\n",
+    "    \n",
+    "    model.eval()\n",
+    "    with torch.inference_mode():\n",
+    "        for X, y in data_loader:\n",
+    "            y_pred = model(X)\n",
+    "            y_preds.append(y_pred.argmax(dim=1).cpu())\n",
+    "            y_true.append(y.cpu())\n",
+    "    \n",
+    "    # Concatenate list of predictions and targets\n",
+    "    y_pred_tensor = torch.cat(y_preds)\n",
+    "    y_true_tensor = torch.cat(y_true)\n",
+    "    \n",
+    "    # Create confusion matrix\n",
+    "    cm = confusion_matrix(y_true_tensor, y_pred_tensor)\n",
+    "    \n",
+    "    # Plot confusion matrix\n",
+    "    plt.figure(figsize=(10, 8))\n",
+    "    plt.imshow(cm, interpolation='nearest', cmap=plt.cm.Blues)\n",
+    "    plt.title('Confusion Matrix')\n",
+    "    plt.colorbar()\n",
+    "    \n",
+    "    # Add labels\n",
+    "    tick_marks = np.arange(len(class_names))\n",
+    "    plt.xticks(tick_marks, class_names, rotation=45)\n",
+    "    plt.yticks(tick_marks, class_names)\n",
+    "    \n",
+    "    # Add text annotations\n",
+    "    threshold = cm.max() / 2.\n",
+    "    for i in range(cm.shape[0]):\n",
+    "        for j in range(cm.shape[1]):\n",
+    "            plt.text(j, i, format(cm[i, j], 'd'),\n",
+    "                    ha=\"center\", va=\"center\",\n",
+    "                    color=\"white\" if cm[i, j] > threshold else \"black\")\n",
+    "    \n",
+    "    plt.ylabel('True Label')\n",
+    "    plt.xlabel('Predicted Label')\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "    \n",
+    "    return cm\n",
+    "\n",
+    "# Generate confusion matrix\n",
+    "cm = make_confusion_matrix(model_0, test_dataloader, class_names)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3902113",
+   "metadata": {},
+   "source": [
+    "## Model Improvements You Can Try\n",
+    "\n",
+    "### 1. **Add More Hidden Layers**\n",
+    "Create a deeper network with more hidden layers and activation functions.\n",
+    "\n",
+    "### 2. **Add Activation Functions**\n",
+    "The current model is missing activation functions between layers.\n",
+    "\n",
+    "### 3. **Add Dropout for Regularization**\n",
+    "Prevent overfitting by adding dropout layers.\n",
+    "\n",
+    "### 4. **Try Different Optimizers**\n",
+    "Experiment with Adam, AdamW, or other optimizers.\n",
+    "\n",
+    "### 5. **Implement Learning Rate Scheduling**\n",
+    "Use learning rate schedulers to improve training.\n",
+    "\n",
+    "### 6. **Use Convolutional Neural Networks (CNNs)**\n",
+    "CNNs are better suited for image classification tasks."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc60a197",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Improved model with activation functions and dropout\n",
+    "class FashionMNISTMODELV1(nn.Module):\n",
+    "    def __init__(self, \n",
+    "                 input_shape: int,\n",
+    "                 hidden_units: int,\n",
+    "                 output_shape: int):\n",
+    "        super().__init__()\n",
+    "        self.layer_stack = nn.Sequential(\n",
+    "            nn.Flatten(),\n",
+    "            nn.Linear(in_features=input_shape, out_features=hidden_units),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(0.2),\n",
+    "            nn.Linear(in_features=hidden_units, out_features=hidden_units),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(0.2),\n",
+    "            nn.Linear(in_features=hidden_units, out_features=output_shape)\n",
+    "        )\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        return self.layer_stack(x)\n",
+    "\n",
+    "# Create improved model\n",
+    "torch.manual_seed(42)\n",
+    "model_1 = FashionMNISTMODELV1(\n",
+    "    input_shape=784,\n",
+    "    hidden_units=128,\n",
+    "    output_shape=len(class_names)\n",
+    ").to(\"cpu\")\n",
+    "\n",
+    "print(f\"Model 1 architecture:\\n{model_1}\")\n",
+    "print(f\"Number of parameters: {sum(p.numel() for p in model_1.parameters())}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf83fec3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# CNN Model for better image classification\n",
+    "class FashionMNISTCNN(nn.Module):\n",
+    "    def __init__(self, \n",
+    "                 input_shape: int,\n",
+    "                 hidden_units: int,\n",
+    "                 output_shape: int):\n",
+    "        super().__init__()\n",
+    "        self.conv_block_1 = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels=input_shape, \n",
+    "                     out_channels=hidden_units, \n",
+    "                     kernel_size=3, \n",
+    "                     stride=1, \n",
+    "                     padding=1),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Conv2d(in_channels=hidden_units, \n",
+    "                     out_channels=hidden_units, \n",
+    "                     kernel_size=3, \n",
+    "                     stride=1, \n",
+    "                     padding=1),\n",
+    "            nn.ReLU(),\n",
+    "            nn.MaxPool2d(kernel_size=2, stride=2)\n",
+    "        )\n",
+    "        self.conv_block_2 = nn.Sequential(\n",
+    "            nn.Conv2d(hidden_units, hidden_units, 3, padding=1),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Conv2d(hidden_units, hidden_units, 3, padding=1),\n",
+    "            nn.ReLU(),\n",
+    "            nn.MaxPool2d(2)\n",
+    "        )\n",
+    "        self.classifier = nn.Sequential(\n",
+    "            nn.Flatten(),\n",
+    "            nn.Linear(in_features=hidden_units*7*7, \n",
+    "                     out_features=output_shape)\n",
+    "        )\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        x = self.conv_block_1(x)\n",
+    "        x = self.conv_block_2(x)\n",
+    "        x = self.classifier(x)\n",
+    "        return x\n",
+    "\n",
+    "# Create CNN model\n",
+    "torch.manual_seed(42)\n",
+    "model_2 = FashionMNISTCNN(\n",
+    "    input_shape=1,  # grayscale images\n",
+    "    hidden_units=10,\n",
+    "    output_shape=len(class_names)\n",
+    ").to(\"cpu\")\n",
+    "\n",
+    "print(f\"CNN Model architecture:\\n{model_2}\")\n",
+    "print(f\"Number of parameters: {sum(p.numel() for p in model_2.parameters())}\")"
    ]
   }
  ],
